# RAG_Evaluation

./: README.md  ingestion.py  main.py  prompts.py  pyproject.toml
Chains/: evaluation.py  generation.py
Evaluation_results/: ReACT.json  bar_plot.py  evaluation_chain_of_thought_prompting.json  evaluation_role_prompting.json  plot_results.py  role_prompting.json  self_consistency.json
LLM/: models.py
faiss_embed/: index.faiss  index.pkl
test_data/: create_test_set.py  load_test_set.py  test-set.jsonl
